<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true"
            android:id="@+id/linearLayout1"
            style="@style/LayoutTheme">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:isScrollContainer="true">

        <TextView
            android:id="@+id/textViewName"
            style="@style/InputLabel"
            android:text="@string/fromNamePrompt"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTextName"
            android:inputType="textPersonName"
            android:imeOptions="actionNext"
            style="@style/InputText" >
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textViewEmail"
            style="@style/InputLabel"
            android:text="@string/fromEmailPrompt"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTextEmail"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            style="@style/InputText" />

        <TextView
            android:id="@+id/textViewMurderer"
            style="@style/InputLabel"
            android:text="@string/guessMurderer"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTextGuessMurderer"
            android:inputType="textPersonName"
            android:imeOptions="actionNext"
            style="@style/InputText" />

        <TextView
            android:id="@+id/textViewWeapon"
            style="@style/InputLabel"
            android:text="@string/guessWeapon"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTextGuessWeapon"
            android:inputType="text"
            android:imeOptions="actionNext"
            style="@style/InputText"/>

        <TextView
            android:id="@+id/textViewFormulae"
            style="@style/InputLabel"
            android:text="@string/guessFormulae"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTextGuessFormulae"
            android:inputType="text"
            android:lines="1"
            android:maxLines="6"
            style="@style/InputText"
            android:imeOptions="actionSend"
            android:hint="@string/guessFormulaeHint" />

        <Button
            style="@style/Buttons"
            android:id="@+id/buttonSend"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendGuessButton"
            android:clickable="true" />

    </LinearLayout>
</ScrollView>